[Add]: characters and 3d sections

--- a/3d.html
+++ b/3d.html
@@ -31,8 +31,8 @@
                                     <li><a href="./characters.html">Characters</a></li>
                                     <li><a href="./icons.html">Icons</a></li>
                                     <li><a href="./isometry.html">Isometry</a></li>
-                                    <li><a href="./3d.html">3D</a></li>
-                                    <li class="active"><a href="./sketches.html">Sketches</a></li>
+                                    <li class="active"><a href="./3d.html">3D</a></li>
+                                    <li><a href="./sketches.html">Sketches</a></li>
                                     <li><a href="./about.html">About</a></li>
                                 </ul>
                             </div>
@@ -48,7 +48,7 @@
             <div class="row align-items-center">
                 <div class="col-12">
                     <div class="breadcrumb-content text-center">
-                        <h2 class="page-title">Sketches</h2>
+                        <h2 class="page-title">3D</h2>
                     </div>
                 </div>
             </div>
@@ -60,9 +60,9 @@
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-15 pr-0 wow fadeInUp"
                     data-wow-delay="100ms">
                     <div class="single-portfolio-content">
-                        <img src="img/samples/sketches/01.jpg" alt="">
+                        <img src="img/samples/3d/preview/01.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/samples//sketches/01.jpg" class="portfolio-img">+</a>
+                            <a href="img/samples/3d/01.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -70,9 +70,9 @@
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video human mb-15 pr-0 wow fadeInUp"
                     data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/samples/sketches/02.jpg" alt="">
+                        <img src="img/samples/3d/preview/02.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/samples/sketches/02.jpg" class="portfolio-img">+</a>
+                            <a href="img/samples/3d/02.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -80,30 +80,30 @@
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-15 pr-0 wow fadeInUp"
                     data-wow-delay="500ms">
                     <div class="single-portfolio-content">
-                        <img src="img/samples/sketches/03.jpg" alt="">
+                        <img src="img/samples/3d/preview/03.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/samples/sketches/03.jpg" class="portfolio-img">+</a>
+                            <a href="img/samples/3d/03.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item human mb-15 pr-0 wow fadeInUp"
-                    data-wow-delay="700ms">
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-15 pr-0 wow fadeInUp"
+                    data-wow-delay="500ms">
                     <div class="single-portfolio-content">
-                        <img src="img/samples/sketches/04.jpg" alt="">
+                        <img src="img/samples/3d/preview/04.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/samples/sketches/04.jpg" class="portfolio-img">+</a>
+                            <a href="img/samples/3d/04.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <footer class="footer-area">
-            <div class="container">
+        <footer class="footer-area ">
+            <div class="container my-3">
                 <div class="row">
                     <div class="col-12">
-                        <div class="footer-content pt-3">
+                        <div class="footer-content">
                             <div class="social-info d-flex justify-content-center">
                                 <a href="https://facebook.com/mikhail.naumovich.g"><i class="ti-facebook"></i></a>
                                 <a href="https://www.linkedin.com/in/mikhail-naumovich-a0b613b3/"><i
@@ -116,8 +116,6 @@
         </footer>
 
         <script src="js/jquery.min.js"></script>
-        <script src="js/popper.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
         <script src="js/alime.bundle.js"></script>
         <script src="js/default-assets/active.js"></script>
 
