--- a/about.html
+++ b/about.html
@@ -30,8 +30,10 @@
                                     <li><a href="./index.html">Home</a></li>
                                     <li><a href="./backgrounds.html">Backgrounds</a></li>
                                     <li><a href="./illustrations.html">Illustrations</a></li>
+                                    <li><a href="./characters.html">Characters</a></li>
                                     <li><a href="./icons.html">Icons</a></li>
                                     <li><a href="./isometry.html">Isometry</a></li>
+                                    <li><a href="./3d.html">3D</a></li>
                                     <li><a href="./sketches.html">Sketches</a></li>
                                     <li class="active"><a href="./about.html">About</a></li>
                                 </ul>
@@ -69,7 +71,7 @@
                         <p class="wow fadeInUp" data-wow-delay="300ms">Since 2015 I’ve been working with mobile games,
                             starting from concept design to final render and game assets' preparation. </p>
                         <p class="wow fadeInUp" data-wow-delay="400ms">My primary weapon is Photoshop but I also amaze
-                            people with Zbrush, KeyShot and Substance Painter.</p>
+                            people with Zbrush, Blender, and Substance Painter.</p>
                         <a class="btn alime-btn btn-2 mt-30 wow fadeInUp text-light" data-wow-delay="500ms"
                             href="mailto:mikhail.naumovich@gmail.com">Contact Me</a>
                     </div>
