--- a/illustrations.html
+++ b/illustrations.html
@@ -28,8 +28,10 @@
                                     <li><a href="./index.html">Home</a></li>
                                     <li><a href="./backgrounds.html">Backgrounds</a></li>
                                     <li class="active"><a href="./illustrations.html">Illustrations</a></li>
+                                    <li><a href="./characters.html">Characters</a></li>
                                     <li><a href="./icons.html">Icons</a></li>
                                     <li><a href="./isometry.html">Isometry</a></li>
+                                    <li><a href="./3d.html">3D</a></li>
                                     <li><a href="./sketches.html">Sketches</a></li>
                                     <li><a href="./about.html">About</a></li>
                                 </ul>
