--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
                                     <li class="active"><a href="./index.html">Home</a></li>
                                     <li><a href="./backgrounds.html">Backgrounds</a></li>
                                     <li><a href="./illustrations.html">Illustrations</a></li>
+                                    <li><a href="./characters.html">Characters</a></li>
                                     <li><a href="./icons.html">Icons</a></li>
                                     <li><a href="./isometry.html">Isometry</a></li>
+                                    <li><a href="./3d.html">3D</a></li>
                                     <li><a href="./sketches.html">Sketches</a></li>
                                     <li><a href="./about.html">About</a></li>
                                 </ul>
@@ -42,13 +44,13 @@
     </header>
     <section class="welcome-area">
         <div class="welcome-slides owl-carousel">
-            <div class="single-welcome-slide bg-img" style="background-image: url(img/slider/02.jpg);">
-            </div>
-            <div class="single-welcome-slide bg-img" style="background-image: url(img/slider/03.jpg);">
-            </div>
             <div class="single-welcome-slide bg-img" style="background-image: url(img/slider/01.jpg);">
             </div>
             <div class="single-welcome-slide bg-img" style="background-image: url(img/slider/04.jpg);">
+            </div>
+            <div class="single-welcome-slide bg-img" style="background-image: url(img/slider/03.jpg);">
+            </div>
+            <div class="single-welcome-slide bg-img" style="background-image: url(img/slider/02.jpg);">
             </div>
         </div>
     </section>
