--- a/isometry.html
+++ b/isometry.html
@@ -28,8 +28,10 @@
                                     <li><a href="./index.html">Home</a></li>
                                     <li><a href="./backgrounds.html">Backgrounds</a></li>
                                     <li><a href="./illustrations.html">Illustrations</a></li>
+                                    <li><a href="./characters.html">Characters</a></li>
                                     <li><a href="./icons.html">Icons</a></li>
                                     <li class="active"><a href="./isometry.html">Isometry</a></li>
+                                    <li><a href="./3d.html">3D</a></li>
                                     <li><a href="./sketches.html">Sketches</a></li>
                                     <li><a href="./about.html">About</a></li>
                                 </ul>
@@ -58,9 +60,9 @@
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-15 pr-0 wow fadeInUp"
                     data-wow-delay="100ms">
                     <div class="single-portfolio-content">
-                        <img src="img/samples/isometry/preview/01.jpg" alt="">
+                        <img src="img/samples/isometry/preview/02.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/samples/isometry/preview/01.jpg" class="portfolio-img">+</a>
+                            <a href="img/samples/isometry/02.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -68,9 +70,9 @@
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video human mb-15 pr-0 wow fadeInUp"
                     data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/samples/isometry/preview/02.jpg" alt="">
+                        <img src="img/samples/isometry/preview/01.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/samples/isometry/preview/02.jpg" class="portfolio-img">+</a>
+                            <a href="img/samples/isometry/01.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -80,7 +82,7 @@
                     <div class="single-portfolio-content">
                         <img src="img/samples/isometry/preview/03.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/samples/isometry/preview/03.jpg" class="portfolio-img">+</a>
+                            <a href="img/samples/isometry/03.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -90,7 +92,7 @@
                     <div class="single-portfolio-content">
                         <img src="img/samples/isometry/preview/04.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/samples/isometry/preview/04.jpg" class="portfolio-img">+</a>
+                            <a href="img/samples/isometry/04.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -118,7 +120,7 @@
                     <div class="single-portfolio-content">
                         <img src="img/samples/isometry/preview/07.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/samples/isometry/07.jpg" class="portfolio-img">+</a>
+                            <a href="img/samples/isometry/preview/07.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -127,7 +129,7 @@
                     <div class="single-portfolio-content">
                         <img src="img/samples/isometry/preview/08.jpg" alt="">
                         <div class="hover-content">
-                            <a href="img/samples/isometry/08.jpg" class="portfolio-img">+</a>
+                            <a href="img/samples/isometry/preview/08.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
