--- a/characters.html
+++ b/characters.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Mikhail Naummovich</title>
+    <title>Mikhail Naumovich</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
