--- a/characters.html
+++ b/characters.html
@@ -70,9 +70,9 @@
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item video human mb-15 pr-0 wow fadeInUp"
                     data-wow-delay="300ms">
                     <div class="single-portfolio-content">
-                        <img src="img/samples/characters/preview/02.jpg" alt="">
+                        <img src="img/samples/characters/preview/02.png" alt="">
                         <div class="hover-content">
-                            <a href="img/samples/characters/02.jpg" class="portfolio-img">+</a>
+                            <a href="img/samples/characters/02.png" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -80,9 +80,9 @@
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item country mb-15 pr-0 wow fadeInUp"
                     data-wow-delay="500ms">
                     <div class="single-portfolio-content">
-                        <img src="img/samples/characters/preview/03.jpg" alt="">
+                        <img src="img/samples/characters/preview/03.png" alt="">
                         <div class="hover-content">
-                            <a href="img/samples/characters/03.jpg" class="portfolio-img">+</a>
+                            <a href="img/samples/characters/03.png" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
