--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </header>
     <section class="welcome-area">
         <div class="welcome-slides owl-carousel">
-            <div class="single-welcome-slide bg-img" style="background-image: url(img/slider/00.png);">
+            <div class="single-welcome-slide bg-img" style="background-image: url(img/slider/00.jpg);">
             </div>
             <div class="single-welcome-slide bg-img" style="background-image: url(img/slider/01.jpg);">
             </div>
