--- a/characters.html
+++ b/characters.html
@@ -72,7 +72,7 @@
                     <div class="single-portfolio-content">
                         <img src="img/samples/characters/preview/02.png" alt="">
                         <div class="hover-content">
-                            <a href="img/samples/characters/02.png" class="portfolio-img">+</a>
+                            <a href="img/samples/characters/02.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
@@ -82,7 +82,7 @@
                     <div class="single-portfolio-content">
                         <img src="img/samples/characters/preview/03.png" alt="">
                         <div class="hover-content">
-                            <a href="img/samples/characters/03.png" class="portfolio-img">+</a>
+                            <a href="img/samples/characters/03.jpg" class="portfolio-img">+</a>
                         </div>
                     </div>
                 </div>
